# fluxgnn-icml2024

./: .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  Makefile  README.md  check_all.sh  deploy.sh  pyproject.toml
experiments/: generate_vtu.py  run.py  stats.py
fluxgnn/: dataset.py  experiment.py  fluxgnn.py  fv_data.py  mixture.py  navier_stokes.py  poisson.py  setting.py  torch_fv.py  util.py
inputs/convection_diffusion/fluxgnn/: fluxgnn.yml
inputs/convection_diffusion/fv/: fv.yml
inputs/mixture/fluxgnn/: fluxgnn_step2_n16_rep2.yml  fluxgnn_step2_n16_rep4.yml  fluxgnn_step2_n16_rep8.yml  fluxgnn_step2_n32_rep2.yml  fluxgnn_step2_n32_rep4.yml  fluxgnn_step2_n32_rep8.yml  fluxgnn_step2_n64_rep2.yml  fluxgnn_step2_n64_rep4.yml  fluxgnn_step2_n64_rep8.yml  fluxgnn_step2_n8_rep2.yml  fluxgnn_step2_n8_rep4.yml  fluxgnn_step2_n8_rep8.yml  fluxgnn_step4_n16_rep2.yml  fluxgnn_step4_n16_rep4.yml  fluxgnn_step4_n16_rep8.yml  fluxgnn_step4_n32_rep2.yml  fluxgnn_step4_n32_rep4.yml  fluxgnn_step4_n32_rep8.yml  fluxgnn_step4_n64_rep2.yml  fluxgnn_step4_n64_rep4.yml  fluxgnn_step4_n64_rep8.yml  fluxgnn_step4_n8_rep2.yml  fluxgnn_step4_n8_rep4.yml  fluxgnn_step4_n8_rep8.yml  sample_input.yml
inputs/mixture/fv/: fv_urep128_arep128.yml  fv_urep128_arep16.yml  fv_urep128_arep32.yml  fv_urep128_arep4.yml  fv_urep128_arep64.yml  fv_urep128_arep8.yml  fv_urep16_arep128.yml  fv_urep16_arep16.yml  fv_urep16_arep32.yml  fv_urep16_arep4.yml  fv_urep16_arep64.yml  fv_urep16_arep8.yml  fv_urep32_arep4.yml  (+23 more)
penn/: eval.py  train.py
tests/cd/: fluxgnn.yml
tests/mixture/: fluxgnn.yml
(+15 files in other folders)
